Added post mapping to add a new student.